--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--steps.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--steps.scss
@@ -21,8 +21,12 @@
   @include media('>=lg-plus') {
     padding: rem(80px) 0;
   }
+  .component-steps__content {
+    @include media('>=lg-plus') {
+      @include container();
+    }
+  }
 
-  .component-steps__content,
   .component-steps__title {
     @include container();
   }
@@ -31,11 +35,37 @@
     display: grid;
     grid-template-rows: repeat(5, minmax(0, 1fr));
     grid-auto-flow: column;
+    position: relative;
+
+    p {
+      margin: 0;
+    }
+
+    &::after {
+      content: '';
+      border-left: 2px dashed #EB8900;
+      position: absolute;
+      top: rem(30px);
+      left: rem(25px);
+      height: 85%;
+      z-index: 0;
+    }
 
     @include media('>=lg-plus') {
       grid-template-columns: repeat(5, minmax(0, 1fr));
       grid-template-rows: unset;
       grid-auto-flow: unset;
+    }
+
+    @include media('>=lg-plus') {
+      &::after {
+        border-left: unset;
+        border-top: 2px dashed #EB8900;
+        top: rem(25px);
+        left: rem(25px);
+        width: 83%;
+        z-index: 0;
+      }
     }
   }
 
@@ -54,39 +84,9 @@
 
   .component-step__title-wrapper {
     position: relative;
-    padding-bottom: rem(30px);
 
     @include media('>=lg-plus') {
-      padding-bottom: 0;
       margin-bottom: rem(30px);
-    }
-  }
-
-  .component-step:not(:last-of-type) {
-    .component-step__title-wrapper {
-      &::after {
-        content: '';
-        border-bottom: 2px dashed $primary-orange;
-        position: absolute;
-        top: 50%;
-        left: 0;
-        width: 100%;
-        z-index: 0;
-      }
-
-      @include media('<lg-plus') {
-        &::after {
-          content: '';
-          border-bottom: unset;
-          border-left: 2px dashed $primary-orange;
-          position: absolute;
-          bottom: 0;
-          left: 50%;
-          width: 100%;
-          height: 100%;
-          z-index: 0;
-        }
-      }
     }
   }
 
@@ -98,7 +98,7 @@
     font-weight: 800;
     background-color: $primary-orange;
     display: inline-flex;
-    padding: rem(10px 10px 10px 20px);
+    padding: rem(5px 5px 5px 10px);
     z-index: 1;
 
     &::after {
@@ -106,14 +106,20 @@
       background-color: $primary-orange;
       position: absolute;
       top: 0;
-      right: rem(-10px);
-      width: rem(20px);
+      right: rem(-5px);
+      width: rem(10px);
       height: 100%;
       transform: skew(-14deg);
     }
 
     @include media('>=lg-plus') {
       font-size: rem(20px);
+      padding: rem(10px 10px 10px 20px);
+
+      &::after {
+        right: rem(-10px);
+        width: rem(20px);
+      }
     }
   }
 
