changed border color

--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--steps.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--steps.scss
@@ -43,7 +43,7 @@
 
     &::after {
       content: '';
-      border-left: 2px dashed #EB8900;
+      border-left: 2px dashed $primary-orange;
       position: absolute;
       top: rem(30px);
       left: rem(25px);
