--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--steps.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--steps.scss
@@ -21,43 +21,77 @@
   @include media('>=lg-plus') {
     padding: rem(80px) 0;
   }
-  .component-steps__content {
-    @include media('>=lg-plus') {
-      @include container();
-    }
-  }
 
   .component-steps__title {
     @include container();
   }
 
   .component-steps__content {
-    display: grid;
-    grid-template-rows: repeat(5, minmax(0, auto));
-    grid-auto-flow: column;
+    display: flex;
+    flex-direction: column;
     position: relative;
 
     p {
       margin: 0;
     }
 
-    //&::after {
-    //  content: '';
-    //  border-left: 2px dashed $primary-orange;
-    //  position: absolute;
-    //  top: rem(30px);
-    //  left: rem(25px);
-    //  height: 85%;
-    //  z-index: 0;
-    //}
 
-    @include media('>=lg-plus') {
-      grid-template-columns: repeat(5, minmax(0, 1fr));
-      grid-template-rows: unset;
-      grid-auto-flow: unset;
+    .component-step {
+      &:nth-child(1) {
+        .component-step__title-wrapper {
+          &::after {
+            top: 45%;
+            height: 50%;
+          }
+
+          @include media('>=lg-plus') {
+            &::after {
+              top: 50%;
+              left: 30%;
+              width: 50%;
+              height: unset;
+            }
+          }
+        }
+      }
+
+      &:nth-last-of-type(1) {
+        .component-step__title-wrapper {
+          &::after {
+            top: 0;
+            height: 50%;
+          }
+
+          @include media('>=lg-plus') {
+            &::after {
+              top: 50%;
+              left: -86px;
+              width: 50%;
+              height: unset;
+            }
+          }
+        }
+      }
+
+      @include media('<lg-plus') {
+        .component-step__inner {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          position: relative;
+        }
+      }
+
+      @include media('>=lg-plus') {
+        width: 20%;
+        max-width: 20%;
+      }
     }
 
     @include media('>=lg-plus') {
+      @include container();
+      flex-direction: row;
+
       &::after {
         border-left: unset;
         border-top: 2px dashed #EB8900;
@@ -85,8 +119,33 @@
   .component-step__title-wrapper {
     position: relative;
 
+    &::after {
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 50%;
+      z-index: 0;
+    }
+
+    @include media('<lg-plus') {
+      flex: 0 0 0;
+      margin-right: rem(24px);
+
+      &::after {
+        height: 95%;
+        border-left: 2px dashed $primary-orange;
+      }
+    }
+
     @include media('>=lg-plus') {
       margin-bottom: rem(30px);
+
+      &::after {
+        top: 50%;
+        left: -31%;
+        width: 98%;
+        border-top: 2px dashed $primary-orange;
+      }
     }
   }
 
@@ -97,7 +156,10 @@
     font-size: rem(16px);
     font-weight: 800;
     background-color: $primary-orange;
-    display: inline-flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     padding: rem(5px 5px 5px 10px);
     z-index: 1;
 
@@ -113,7 +175,13 @@
       z-index: -1;
     }
 
+    @include media('<lg-plus') {
+      width: rem(45px);
+      margin: rem(20px 0);
+    }
+
     @include media('>=lg-plus') {
+      display: inline-flex;
       font-size: rem(20px);
       padding: rem(10px 10px 10px 20px);
 
@@ -126,74 +194,5 @@
 
   .component-step__content {
     padding-right: rem(20px);
-  }
-
-  @include media('<lg-plus') {
-    .component-steps__content {
-      display: flex;
-      flex-direction: column;
-
-      .component-step {
-        &:nth-child(1) {
-          .component-step__title-wrapper {
-            &:after {
-              top: 45%;
-              height: 50%;
-            }
-          }
-        }
-
-        &:nth-last-of-type(1) {
-          .component-step__title-wrapper {
-            &:after {
-              top: 0;
-              height: 50%;
-            }
-          }
-        }
-      }
-    }
-
-    .component-step__inner {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      position: relative;
-    }
-
-    .component-step__title-wrapper {
-      flex: 0 0 0;
-      position: relative;
-      margin-right: rem(24px);
-
-      &::after {
-        position: absolute;
-        content: '';
-        top: 0;
-        left: 50%;
-        height: 95%;
-        border-left: 2px dashed $primary-orange;
-        z-index: 0;
-      }
-
-      //&::after {
-      //  content: '';
-      //  border-top: 2px dashed #EB8900;
-      //  position: absolute;
-      //  top: rem(25px);
-      //  left: rem(25px);
-      //  height: 85%;
-      //  z-index: 0;
-      //}
-    }
-
-    .component-step__title {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: rem(45px);
-      margin: rem(20px 0);
-      text-align: center;
-    }
   }
 }
