added padding for larger screens

--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--steps.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--steps.scss
@@ -194,5 +194,9 @@
 
   .component-step__content {
     padding-right: rem(20px);
+
+    @include media('>=lg-plus') {
+      padding-right: rem(40px);
+    }
   }
 }
