--- a/source/themes/custom/gearwrench/styles/libraries/region/header.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/header.scss
@@ -492,7 +492,6 @@ $mobile-menu-item-button-height: 7rem;
   .block--header-search {
     display: flex;
     padding-left: 1.5rem;
-    position: relative;
 
     .block__content-toggle {
       @include icon('search');
@@ -603,7 +602,8 @@ $mobile-menu-item-button-height: 7rem;
 
           height: 70%;
           margin: 10px auto;
-          position: relative;
+          position: absolute;
+          right: 10%;
           width: 55%;
 
           &:first-of-type {
@@ -1099,7 +1099,8 @@ $mobile-menu-item-button-height: 7rem;
             padding-left: 15px;
           }
 
-          .search-icon, .search-reset {
+          .search-icon,
+          .search-reset {
             background-color: $white;
             border: 0;
             height: 48px;
