--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--featured-media--layout-slider.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--featured-media--layout-slider.scss
@@ -15,6 +15,8 @@
  */
 .component-featured-media--layout-slider {
   .component-featured-media__list-wrapper {
+    box-shadow: 0 0 16px 5px rgba(0, 0, 0, 0.2);
+
     &:not(.swiper-container-initialized) {
       .component-featured-media__list-item {
         display: none;
@@ -34,7 +36,6 @@
   .component-featured-media__list-item {
     height: auto;
     list-style: none;
-    margin-bottom: 1.5rem;
 
     &.swiper-slide .media {
       height: 100%;
@@ -55,13 +56,12 @@
 
   .component-featured-media__pagination {
     position: relative;
+    margin-top: 1.5rem;
 
     .swiper-pagination-bullet {
       background: transparent;
       border-color: $gray-90;
       margin: 0 0.5rem;
-      width: 0.6rem;
-      height: 0.6rem;
     }
 
     .swiper-pagination-bullet-active {
