--- a/source/themes/custom/gearwrench/styles/libraries/region/header.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/header.scss
@@ -13,8 +13,8 @@
 /**
  * SASS Variables
  */
-$header-bp-desktop: '>=lg';
-$header-bp-mobile: '<lg';
+$header-bp-desktop: '>=xl';
+$header-bp-mobile: '<xl';
 $header-z-index: 501;
 $mobile-menu-item-button-height: 7rem;
 
@@ -213,16 +213,7 @@ $mobile-menu-item-button-height: 7rem;
         font-weight: $fw-extra-bold;
       }
 
-      @include media('<=1200px') {
-        font-size: rem(17px);
-      }
-      @include media('<=1100px') {
-        font-size: rem(16px);
-      }
-      @include media('<=1050px') {
-        font-size: rem(15.5px);
-      }
-      @include media('<lg') {
+      @include media($header-bp-mobile) {
         font-size: rem(22px);
       }
     }
@@ -282,7 +273,11 @@ $mobile-menu-item-button-height: 7rem;
 
     .menu-item__panel {
       display: block;
-      background-color: $primary-orange;
+      background-color: $black;
+
+      @include media($header-bp-desktop) {
+        background-color: $primary-orange;
+      }
     }
 
     .menu-item__button[aria-expanded='true'] .menu-item__button-collapse,
@@ -466,7 +461,7 @@ $mobile-menu-item-button-height: 7rem;
           @include on-event() {
             text-decoration: underline;
           }
-          color: $white;
+          color: $primary-orange;
           font-family: $font-brand;
           font-weight: $fw-bold;
           text-transform: uppercase;
@@ -727,7 +722,7 @@ $mobile-menu-item-button-height: 7rem;
             }
 
             &::after {
-              right: rem(-35px);
+              right: rem(-20px);
             }
 
             @include media('<=xl') {
@@ -989,7 +984,7 @@ $mobile-menu-item-button-height: 7rem;
 
       .menu__content-container {
         padding: 0;
-       }
+      }
 
       .menu-item {
         @include flex;
@@ -1056,8 +1051,23 @@ $mobile-menu-item-button-height: 7rem;
             width: 100%;
           }
 
+          .menu--depth-1 {
+            margin-left: rem(20px);
+
+            .menu-item__link {
+              color: $primary-orange;
+            }
+          }
+
           .featured-tools-menu__menu-wrapper {
             flex: 1;
+          }
+
+          .all-tools-menu {
+            .menu-item__panel-header,
+            .all-tools-menu__content-container .menu-item__link {
+              color: $primary-orange;
+            }
           }
         }
 
