changed margin to padding removing shift to right on mobile

--- a/source/themes/custom/gearwrench/styles/libraries/region/header.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/header.scss
@@ -1042,7 +1042,7 @@ $mobile-menu-item-button-height: 7rem;
           }
 
           .menu--depth-1 {
-            margin-left: rem(20px);
+            padding-left: rem(20px);
 
             .menu-item__link {
               color: $primary-orange;
