--- a/source/themes/custom/gearwrench/styles/libraries/node/full.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full.scss
@@ -14,6 +14,64 @@
  * Component
  */
 .node--view-mode-full .node__content {
+  .page-heading {
+    display: flex;
+    flex-flow: row wrap;
+    margin-bottom: 3rem;
+
+    @include media('>=lg') {
+      margin-bottom: 2rem;
+    }
+
+    .heading-left {
+      flex: 0 0 100%;
+      margin-bottom: 3rem;
+
+      @include media('>=lg') {
+        align-self: flex-start;
+        flex: 3;
+        margin-bottom: 0;
+        padding-right: 50px;
+      }
+    }
+
+    .heading-right {
+      flex: 0 0 100%;
+
+      @include media('>=lg') {
+        align-self: flex-end;
+        flex: 1;
+      }
+    }
+  }
+
+  .field--name-field-link {
+    text-align: center;
+
+    a {
+      @include btn();
+    }
+  }
+
+  .field--name-field-media {
+    left: 50%;
+    margin-bottom: 5rem;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    max-width: 100vw;
+    position: relative;
+    right: 50%;
+    width: 100vw;
+
+    img {
+      height: 256px;
+
+      @include media('>=lg') {
+        height: 504px;
+      }
+    }
+  }
+
   & > .paragraph-component {
     margin-top: $gap-vertical-mid;
 
@@ -21,5 +79,4 @@
       margin-top: $gap-vertical-md;
     }
   }
-
 }
