feature/VYRKCATG-40: Switched to using the mixin for the full width image container. Also fixed height issues.

--- a/source/themes/custom/gearwrench/styles/libraries/node/full.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full.scss
@@ -54,20 +54,15 @@
   }
 
   .field--name-field-media {
-    left: 50%;
+    @include container-full-width();
+
     margin-bottom: 5rem;
-    margin-left: -50vw;
-    margin-right: -50vw;
-    max-width: 100vw;
-    position: relative;
-    right: 50%;
-    width: 100vw;
 
     img {
       height: 256px;
 
       @include media('>=lg') {
-        height: 504px;
+        height: auto;
       }
     }
   }
