Updated desktop css for steps to expand into available space

--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--steps.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--steps.scss
@@ -63,8 +63,8 @@
           @include media('>=lg-plus') {
             &::after {
               top: 50%;
-              left: 22%;
-              width: 50%;
+              left: 0;
+              width: 100%;
               height: unset;
             }
           }
@@ -81,9 +81,10 @@
           @include media('>=lg-plus') {
             &::after {
               top: 50%;
-              left: -36%;
-              width: 50%;
+              left: 0;
+              width: 0;
               height: unset;
+              border-top: 0;
             }
           }
         }
@@ -99,8 +100,8 @@
       }
 
       @include media('>=lg-plus') {
-        width: 20%;
-        max-width: 20%;
+        max-width: 100%;
+        flex: 1 0 0;
       }
     }
 
@@ -160,8 +161,8 @@
 
       &::after {
         top: 50%;
-        left: -31%;
-        width: 98%;
+        left: 0;
+        width: 100%;
         border-top: 2px dashed $primary-orange;
       }
     }
