--- a/source/themes/custom/gearwrench/styles/libraries/node/full.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full.scss
@@ -15,7 +15,7 @@
  */
 .node--view-mode-full .node__content {
   .page-heading {
-    display: flex;
+    @include flex();
     flex-flow: row wrap;
     margin-bottom: 3rem;
 
@@ -28,7 +28,6 @@
       margin-bottom: 3rem;
 
       @include media('>=lg') {
-        align-self: flex-start;
         flex: 3;
         margin-bottom: 0;
         padding-right: 50px;
@@ -39,7 +38,6 @@
       flex: 0 0 100%;
 
       @include media('>=lg') {
-        align-self: flex-end;
         flex: 1;
       }
     }
